--- a/templates/404.html
+++ b/templates/404.html
@@ -4,8 +4,10 @@
 
 {% block content %}
 <main>
-    <h1>Shinigami!</h1>
+    <h1>Not Found!</h1>
     <p>The page you were looking for could not be found.</p>
-    <p>Please consult the Bunbunmaru Newspaper Editorial for further imformation.</p>
+    <div class="side-by-side-container">
+        <img alt="Pusheen the cat trying to find something" src="/images/404.webp" style="width: 25%"/>
+    </div>
 </main>
 {% endblock content %}
